--- a/Group Website/THis.html
+++ b/Group Website/THis.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
+<style>
+	nav{
+		float:left;
+		padding: 10px;
+	}
+</style>
 <head>
 	<title>This is our Website</title>
+	<nav>
+		<a href="THis.html">Home</a>
+		<a href="reidpage.html">Reid</a>
+		<a href="rossPage.html">Ross</a>
+	</nav>
 </head>
 <body>
-	<p>This is the website we will use to add an app at a later date.</p>
+
 </body>
 </html>
