--- a/bootstrap dice monster game/diceroll.html
+++ b/bootstrap dice monster game/diceroll.html
@@ -1,32 +1,87 @@
 <<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="diceroll.css">
+    <html>
 
-  </head>
-  <<body>
+    <head>
+        <title>Monster Fight</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="diceroll.css">
+
+    </head>
+    <<body>
+
+        <div class="jumbotron">
+            <h1 class="display-4">Monster Fight</h1>
+            <p class="lead">Roll the dice and try to defeat the monster!</p>
+        </div>
 
         <div class="container">
-      <div class="row">
-        <div class="col-lg">
-          <img id="picture" src="dice1.png"/>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Player Health</h5>
+                            <p id="playerScoreDisp" class="card-text">HP: 100</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm">
+
+                    <div class="col-sm">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Monster Health</h5>
+                                <p id="playerScoreDisp" class="card-text">HP: 100</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-sm">
+                    <h5>Player</h5>
+                </div>
+
+                <div class="col-sm">
+                    <h5>Attack</h5>
+                </div>
+
+                <div class="col-sm">
+                    <h5>Monster</h5>
+                </div>
+
+
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <img id="picture" src="dice1.png" />
+                </div>
+                <div class="col-sm">
+                    <img id="picture2" src="dice1.png" />
+                </div>
+            </div>
+
+            <button type="button" id="button1" onclick="rollTheDice" class="btn btn-primary">Big Click
+                Fam</button>
+
+
         </div>
-        <div class="col-lg">
-          <img id="picture2" src="dice1.png"/>
-        </div>
-      </div>
-
-        <button type="button" id="button1" onclick="rollTheDice" class="btn btn-primary">Big Click Fam</button>
 
 
-    </div>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
+        <script src="diceroll.js"></script>
+        </body>
 
-    
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="diceroll.js"></script>
-  </body>
-</html>
+    </html>
