--- a/bootstrap dice monster game/diceroll.html
+++ b/bootstrap dice monster game/diceroll.html
@@ -21,7 +21,7 @@
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Player Health</h5>
-                            <p id="playerScoreDisp" class="card-text">HP: 100</p>
+                            <p id="playerScoreDisp" class="card-text"></p>
                         </div>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Monster Health</h5>
-                                <p id="playerScoreDisp" class="card-text">HP: 100</p>
+                                <p id="monsterScoreDisp" class="card-text"></p>
                             </div>
                         </div>
                     </div>
@@ -48,6 +48,8 @@
 
                 <div class="col-sm">
                     <h5>Attack</h5>
+                    <p id="runningPlayerScore"></p>
+                    <p id="runningMonsterScore"></p>
                 </div>
 
                 <div class="col-sm">
