--- a/bootstrap dice monster game/diceroll.html
+++ b/bootstrap dice monster game/diceroll.html
@@ -21,7 +21,7 @@
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Player Health</h5>
-                            <p id="playerScoreDisp" class="card-text"></p>
+                            <p id="playerScoreDisp" class="card-text"> HP: 20</p>
                         </div>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Monster Health</h5>
-                                <p id="monsterScoreDisp" class="card-text"></p>
+                                <p id="monsterScoreDisp" class="card-text"> HP: 30</p>
                             </div>
                         </div>
                     </div>
@@ -42,18 +42,20 @@
 
 
             <div class="row">
-                <div class="col-sm">
+                <div class="col-lg">
                     <h5>Player</h5>
+                    <img id="heroPicture" src="hero.jpg" />
                 </div>
 
-                <div class="col-sm">
+                <div class="col-lg">
                     <h5>Attack</h5>
                     <p id="runningPlayerScore"></p>
                     <p id="runningMonsterScore"></p>
                 </div>
 
-                <div class="col-sm">
+                <div class="col-lg">
                     <h5>Monster</h5>
+                    <img id="monsterPicture" src="monster.jpg" />
                 </div>
 
 
