--- a/bootstrap dice monster game/diceroll.html
+++ b/bootstrap dice monster game/diceroll.html
@@ -15,6 +15,27 @@
             <p class="lead">Roll the dice and try to defeat the monster!</p>
         </div>
 
+        <div class="modal fade" id="modalDisp" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+              
+              </div>
+              <div class="modal-footer">
+                <button id="playButton" onclick='loadGame()' type="button" class="btn btn-secondary" data-dismiss="modal">Play Game</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
+
         <div class="container">
             <div class="row">
                 <div class="col-sm">
