--- a/bootstrap dice monster game/diceroll.html
+++ b/bootstrap dice monster game/diceroll.html
@@ -19,13 +19,13 @@
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modalTitle"></h5>
+                <h5 class="modal-title" id="modalTitle">Failure</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body">
-              
+
               </div>
               <div class="modal-footer">
                 <button id="playButton" onclick='loadGame()' type="button" class="btn btn-secondary" data-dismiss="modal">Play Game</button>
@@ -34,7 +34,26 @@
           </div>
         </div>
 
-        
+        <div class="modal fade" id="modalDisp2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle">You Win!!</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+
+              </div>
+              <div class="modal-footer">
+                <button id="playButton" onclick='loadGame()' type="button" class="btn btn-secondary" data-dismiss="modal">Play Game</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
 
         <div class="container">
             <div class="row">
@@ -48,7 +67,7 @@
                 </div>
 
 
-                <div class="col-sm">
+
 
                     <div class="col-sm">
                         <div class="card" style="width: 18rem;">
@@ -59,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+
 
 
             <div class="row">
